// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template PublishedPage should render correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "View Draft",
        "to": "/templates/edit/id",
      },
      Object {
        "Component": [Function],
        "content": "Preview & Send",
        "to": "/templates/preview/id/published",
      },
    ]
  }
  title="id (Published)"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templatePublished"
        readOnly={true}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        name="templatePublished"
        readOnly={true}
      />
    </Grid.Column>
  </Grid>
</Page>
`;

exports[`Template PublishedPage should render read-only correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "View Draft",
        "to": "/templates/edit/id",
      },
      Object {
        "Component": [Function],
        "content": "Preview",
        "to": "/templates/preview/id/published",
      },
    ]
  }
  title="id (Published)"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templatePublished"
        readOnly={true}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        name="templatePublished"
        readOnly={true}
      />
    </Grid.Column>
  </Grid>
</Page>
`;
